--- a/src/component/Loading/Loading.scss
+++ b/src/component/Loading/Loading.scss
@@ -3,24 +3,69 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background-color: #000000;
+    height: 100vh;
+    background-image: url("https://images.unsplash.com/photo-1563974318767-a4de855d7b43?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1174&q=80");
     z-index: 999;
+    background-repeat: no-repeat;
+    max-width: 100%;
+    background-size:cover;
+
+    &::before {
+      content:"";
+      position: absolute;
+      top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #000000;
+        opacity: .6;
+    }
+
+    .loading-spinner {
+        position: absolute;
+        top: 40%;
+        left: 50%;
+        width: 50px;
+        height: 50px;
+        margin-top: 10px;
+        margin-left: -30px;
+        border-radius: 50%;
+        border: 6px solid #ffffff;
+        border-top-color: #4753ff;
+        animation: spin 1s ease-in-out infinite;
+      }
+
+      .detecting-location {
+        position: absolute;
+        top: 50%;
+        left: 0;
+        right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 50%;
+        color: var(--white);
+
+        h2 {
+          font-family: var(--Gilroy);
+          font-size: 2.5rem;
+          font-weight: 600;
+          letter-spacing: .8px;
+        }
+             p {
+                font-family: var(--Gilroy);
+                  font-size: 1.5rem;
+                  font-weight: 300;
+                  width: 80%;
+                  max-width: 100%;
+                  text-align: center;
+             }
+      }
   }
-  
-  .loading-spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 60px;
-    height: 60px;
-    margin-top: 10px;
-    margin-left: -30px;
-    border-radius: 50%;
-    border: 6px solid #ffffff;
-    border-top-color: #4753ff;
-    animation: spin 1s ease-in-out infinite;
-  }
+
   
   @keyframes spin {
     from {
