--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,13 @@
-@import url('http://fonts.cdnfonts.com/css/gilroy-bold');
+// @import url('http://fonts.cdnfonts.com/css/gilroy-bold');
 @import url(//db.onlinewebfonts.com/c/0a2bda6a452a0e2e10770717bac25392?family=AgudaBlackUnicaseW01-Rg);
+
 @font-face {
   font-family: "AgudaBlackUnicaseW01-Rg";
-  src: url("//db.onlinewebfonts.com/t/0a2bda6a452a0e2e10770717bac25392.woff2") 
-  format("woff2"), 
+  src: url("//db.onlinewebfonts.com/t/0a2bda6a452a0e2e10770717bac25392.woff2") format("woff2"),
 }
+
+@import url('https://fonts.cdnfonts.com/css/gilroy-bold');
+
 
 :root {
   --Gilroy: 'Gilroy', sans-serif;
@@ -16,12 +19,14 @@
   --white: #FFFFFF;
   --card-bg: #1E1E1E;
 }
+
 html {
   box-sizing: border-box;
   font-size: 62.5%;
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
+
 body {
   background: var(--main-bg);
   font-size: 1.6rem;
@@ -35,6 +40,7 @@ body {
   min-width: 100px;
   overflow: hidden;
 }
+
 *,
 *::before,
 *::after {
@@ -42,4 +48,3 @@ body {
   margin: 0;
   padding: 0;
 }
-
