--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -360,7 +360,9 @@
 
 
     @media only screen and (max-width: 575px) {
-      width: 300px;
+      // width: 300px;
+      height: 206px;
+      padding: 2.4rem 2rem;
     }
 
     // width: 300px;
