--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
 // @import url('http://fonts.cdnfonts.com/css/gilroy-bold');
-@import url(//db.onlinewebfonts.com/c/0a2bda6a452a0e2e10770717bac25392?family=AgudaBlackUnicaseW01-Rg);
+@import url("https://db.onlinewebfonts.com/c/0a2bda6a452a0e2e10770717bac25392?family=AgudaBlackUnicaseW01-Rg");
 
 @font-face {
   font-family: "AgudaBlackUnicaseW01-Rg";
-  src: url("//db.onlinewebfonts.com/t/0a2bda6a452a0e2e10770717bac25392.woff2") format("woff2"),
+  src: url("//db.onlinewebfonts.com/t/0a2bda6a452a0e2e10770717bac25392.woff2") format("woff"),
 }
 
 @import url('https://fonts.cdnfonts.com/css/gilroy-bold');
