--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -252,12 +252,12 @@
   }
 }
 
-// @media screen and (max-width: 480px) {
-//   .Toastify__toast-container {
-//     left: 0;
-//     margin: 0;
-//     padding: 0;
-//     right: 0;
-//     width: 100vw;
-//   }
-// }
+@media screen and (max-width: 480px) {
+  // .Toastify__toast-container--top-right {
+  //   top: 0;
+  //   left: 0;
+  //   margin: 0 auto;
+  //   transform: translateX(0);
+  //   width: 300px;
+  // }
+}
