--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -207,57 +207,57 @@
     }
   }
 
-  .Toastify__toast {
-    color: #444C63;
-    font-size: 16px;
-    padding-left: 20px;
-    line-height: 20px;
-    font-weight: 400;
-    margin: 0 auto;
+  // .Toastify__toast {
+  //   color: #444C63;
+  //   font-size: 16px;
+  //   padding-left: 20px;
+  //   line-height: 20px;
+  //   font-weight: 400;
+  //   margin: 0 auto;
 
-  }
+  // }
 
-  .Toastify__toast-container {
-    width: 100vw;
-    right: 0;
-    max-width: 100%;
-    width: 400px;
-  }
+  // .Toastify__toast-container {
+  //   width: 100vw;
+  //   right: 0;
+  //   max-width: 100%;
+  //   width: 400px;
+  // }
 
 
   @media only screen and (max-width: 767px) {
-    .Toastify__toast {
-      color: #444C63;
-      font-size: 16px;
-      padding-left: 20px;
-      line-height: 20px;
-      font-weight: 400;
-      margin: 0 auto;
+    // .Toastify__toast {
+    //   color: #444C63;
+    //   font-size: 16px;
+    //   padding-left: 20px;
+    //   line-height: 20px;
+    //   font-weight: 400;
+    //   margin: 0 auto;
 
-    }
+    // }
 
-    .Toastify__toast-container {
-      width: 100vw;
-      /* padding: 0; */
-      // left: 0;
-      /* margin: 0; */
-      margin-left: auto;
-      margin-right: auto;
-      right: 0;
-      left: 0;
-      max-width: 100%;
-      width: 300px;
-    }
+    // .Toastify__toast-container {
+    //   width: 100vw;
+    //   /* padding: 0; */
+    //   // left: 0;
+    //   /* margin: 0; */
+    //   margin-left: auto;
+    //   margin-right: auto;
+    //   right: 0;
+    //   left: 0;
+    //   max-width: 100%;
+    //   width: 300px;
+    // }
 
   }
 }
 
 @media screen and (max-width: 480px) {
-  // .Toastify__toast-container--top-right {
-  //   top: 0;
-  //   left: 0;
-  //   margin: 0 auto;
-  //   transform: translateX(0);
-  //   width: 300px;
-  // }
+  .Toastify__toast-container--top-right {
+    padding: 0% 5% !important;
+    left: 0;
+    margin: 0 auto !important;
+    right: 0 !important;
+  }
+
 }
